@@ -2133,24 +2133,42 @@ version:date:md5:filename:x64:trial:platform
       }
     }
     if (mcmcOptions$hcen > 0) {
-      if (mcmcOptions$hcen < 2 || mcmcOptions$hcen > length(na.omit(levID))) {
-        stop("Invalid level for hierarchical centring")
+      if (D[1] == "Multivariate Normal" || D[1] == "Mixed" || D[1] == "Multinomial") {
+        if (mcmcOptions$hcen < 3 || mcmcOptions$hcen > 1 + length(na.omit(levID))) {
+          stop("Invalid level for hierarchical centring")
+        }
+      } else {
+        if (mcmcOptions$hcen < 2 || mcmcOptions$hcen > length(na.omit(levID))) {
+          stop("Invalid level for hierarchical centring")
+        }
       }
     }
     if (is.matrix(mcmcOptions$paex)) {
       for (i in 1:nrow(mcmcOptions$paex)) {
         if (mcmcOptions$paex[i, 2] == 1) {
           pelev <- mcmcOptions$paex[i, 1]
-          if (pelev < 2 || pelev > length(na.omit(levID))) {
-            stop("Invalid level for parameter expansion")
+          if (D[1] == "Multivariate Normal" || D[1] == "Mixed" || D[1] == "Multinomial") {
+            if (pelev < 3 || pelev > 1 + length(na.omit(levID))) {
+              stop("Invalid level for parameter expansion")
+            }
+          } else {
+            if (pelev < 2 || pelev > length(na.omit(levID))) {
+              stop("Invalid level for parameter expansion")
+            }
           }
         }
       }
     } else {
       if (mcmcOptions$paex[2] == 1) {
         pelev <- mcmcOptions$paex[1]
-        if (pelev < 2 || pelev > length(na.omit(levID))) {
-          stop("Invalid level for parameter expansion")
+        if (D[1] == "Multivariate Normal" || D[1] == "Mixed" || D[1] == "Multinomial") {
+          if (pelev < 3 || pelev > 1 + length(na.omit(levID))) {
+            stop("Invalid level for parameter expansion")
+          }
+        } else {
+          if (pelev < 2 || pelev > length(na.omit(levID))) {
+            stop("Invalid level for parameter expansion")
+          }
         }
       }
     }
